[templates]: Fix some issues with the templates

--- a/templates/root_CMakeLists.txt.template
+++ b/templates/root_CMakeLists.txt.template
@@ -12,13 +12,14 @@ include(scaffold)
 
 sf_init_project(%%{conf_project_name})
 
-sf_set_cxxstd(17)
-
-sf_add_default_subdirectories()
 add_subdirectory("%%{conf_scaffold_third_party}")
 
+sf_set_cxxstd(17)
 sf_add_common_compiler_flags()
 
 include(cmake/%%{conf_project_name}.cmake)
+sf_add_default_subdirectories()
 
+add_subdirectory(samples)
 add_subdirectory(%%{conf_project_name})
+
