--- a/cmake/CMakeLists.txt
+++ b/cmake/CMakeLists.txt
@@ -1,3 +1,5 @@
 
+include("${CMAKE_CURRENT_LIST_DIR}/common.cmake")
+include("${CMAKE_CURRENT_LIST_DIR}/compiler.cmake")
 include("${CMAKE_CURRENT_LIST_DIR}/filters.cmake")
 include("${CMAKE_CURRENT_LIST_DIR}/flags.cmake")
